--- a/TableroSLAs/CambiarPsw.html
+++ b/TableroSLAs/CambiarPsw.html
@@ -44,20 +44,22 @@
             <td><input type="text" id="mc_c_usuariosConfirmNewPwd" value="{ConfirmNewPwd}" name="{ConfirmNewPwd_Name}"></td>
           </tr>
  
-          <tr class="Controls">
-            <td class="th"><label for="mc_c_usuariosUsrSharePoint">Usr Share Point</label></td> 
-            <td><input type="text" id="mc_c_usuariosUsrSharePoint" maxlength="15" size="15" value="{UsrSharePoint}" name="{UsrSharePoint_Name}"></td>
-          </tr>
+<!-- BEGIN Panel Panel1 -->
+<tr class="Controls">
+  <td class="th"><label for="mc_c_usuariosPanel1UsrSharePoint">Usr Share Point</label></td> 
+  <td><input type="text" id="mc_c_usuariosPanel1UsrSharePoint" maxlength="15" size="15" value="{UsrSharePoint}" name="{UsrSharePoint_Name}"></td> 
+</tr>
  
-          <tr class="Controls">
-            <td class="th"><label for="mc_c_usuariosPwdSharePoint">Pwd Share Point</label></td> 
-            <td><input type="text" id="mc_c_usuariosPwdSharePoint" maxlength="15" size="15" value="{PwdSharePoint}" name="{PwdSharePoint_Name}"></td>
-          </tr>
+<tr class="Controls">
+  <td class="th"><label for="mc_c_usuariosPanel1PwdSharePoint">Pwd Share Point</label></td> 
+  <td><input type="text" id="mc_c_usuariosPanel1PwdSharePoint" maxlength="15" size="15" value="{PwdSharePoint}" name="{PwdSharePoint_Name}"></td> 
+</tr>
  
-          <tr class="Controls">
-            <td class="th"><label for="mc_c_usuariosCDSDefault">CDSDefault</label></td> 
-            <td><input type="text" id="mc_c_usuariosCDSDefault" maxlength="15" size="15" value="{CDSDefault}" name="{CDSDefault_Name}"></td>
-          </tr>
+<tr class="Controls">
+  <td class="th"><label for="mc_c_usuariosPanel1CDSDefault">CDSDefault</label></td> 
+  <td><input type="text" id="mc_c_usuariosPanel1CDSDefault" maxlength="15" size="15" value="{CDSDefault}" name="{CDSDefault_Name}"></td> 
+</tr>
+<!-- END Panel Panel1 -->
  
           <tr class="Bottom">
             <td style="TEXT-ALIGN: right" colspan="2">
