Se agrega nueva variable de sesión
Se agrega => capc_cds

--- a/TableroSLAs/Login.html
+++ b/TableroSLAs/Login.html
@@ -188,6 +188,7 @@ jQuery(function ($) {
           </p>
  
           <p>Para el acceso a este Tablero deberá gestionar su usuario por medio del grupo de Configuración y Métricas establecido por el Modelo de Gobierno del Contrato del SDMA-4. (Alejandro Bermúdez Lozano <a href="mailto: alejandro.bermudez@sat.gob.mx">alejandro.bermudez@sat.gob.mx</a>) </p>
+          <p>Soporte para los usuarios del Tablero de Control Integral <a href="mailto: mmya@iteraprocess.com">mmya@iteraprocess.com</a></p>
         </div>
  
         <div style="WIDTH: 90%">
